--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.115",
     "react-scripts": "5.0.1",
-    "tachyons": "^4.12.0"
+    "react-tsparticles": "^2.9.3",
+    "tachyons": "^4.12.0",
+    "tsparticles": "^2.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
